[tool.poetry]
name = "Buttonhole"
version = "0.1.0"
description = ""
authors = ["Justus Voigt <connectmaeuse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Migrate = "^3.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Assets = "^2.0"
flask-blueprint = "^1.3.0"
Flask-Cors = "^3.0.10"
SQLAlchemy-Utils = "^0.37.7"
sentry-sdk = "^1.1.0"
Jinja2 = "^3.0.1"
jsmin = "^2.2.2"
cssmin = "^0.2.0"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
